--- a/metric.css
+++ b/metric.css
@@ -13,6 +13,7 @@ background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 23
         color: black;
         height: 100vh;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
 }
@@ -127,4 +128,15 @@ h4{
         border-radius: 10px;
         font-size: 1rem;
         min-height: 4rem;
+}
+
+.information{
+        text-align: center;
+        margin: 23px 7%;
+        border: 1px solid black;
+        background-color: rgb(100, 146, 146);
+        font-size: 30px;
+        font-weight: 300;
+        
+       
 }
